# mmpm

./: '  .coveragerc  .gitignore  .pdm-python  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  Makefile.bak  README.md  certificate-localhost.pem  certificate.pem  devbox.json  flask_monitoringdashboard.db  log_server.py  mmpm.ini  mmpm.js  mmpm.py  mypy.ini  node_helper.js  output.js  pylintrc  pyproject.toml  requirements.py  requirements.txt  setup.py  travis.yml.bak  wsgi.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  mmpm-bug-report.md
.github/workflows/: build.yml  pythonapp.yml  workflow.yml
.mypy_cache/3.6/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  queue.data.json  queue.meta.json  re.data.json  re.meta.json  shutil.data.json  shutil.meta.json  socket.data.json  socket.meta.json  socketserver.data.json  socketserver.meta.json  ssl.data.json  ssl.meta.json  string.data.json  string.meta.json  subprocess.data.json  subprocess.meta.json  (+18 more)
.vim/: coc-settings.json
configs/: gen-mmpm-conf.sh  gen-mmpm-service.sh  gunicorn.conf.py  mmpm-webssh.service  mmpm.conf  mmpm.service  supervisord.conf
deb_dist/: mmpm_2.0-1.debian.tar.xz  mmpm_2.0-1.dsc  mmpm_2.0-1_amd64.buildinfo  mmpm_2.0-1_amd64.changes  mmpm_2.0-1_source.buildinfo  mmpm_2.0-1_source.changes  python3-mmpm_2.0-1_all.deb
deb_dist/mmpm-2.0/: .travis.yml  CHANGELOG.md  LICENSE  PKG-INFO  node_helper.js  requirements.txt
dev/: ecosystem.json
docker/: Dockerfile
flask-server/: mmpm-flask-server.py
gui/: .eslintrc.json  README.md  angular.json  package-lock.json  package.json  tsconfig.json  tsfmt.json  tslint.json
gui-TO-BE-REMOVED/: .eslintrc.json  package-lock.json
gui-TO-BE-REMOVED/.vim/: coc-settings.json
gui-TO-BE-REMOVED/src/: index.html
gui/src/: custom-theme.scss  index.html  styles.scss
js/: mmpm.js  node_helper.js
lib/: .clang-format  Makefile  mmpm.c  mmpm.h  run.py
mmpm/: '  .mmpm.py.~undo-tree~  ;  README.md  REMOVE_ME_api.py  __main__.py  __version__.py  api.py  color.py  colors.py  consts.py  core.py  entrypoint.py  env.py  gui.py  gunicorn.conf.py  logger.py  mmpm.py  models.py  opts.py  singleton.py  ui.py  utils.py  wsgi.py
mmpm/api/: api.py  base_endpoint.py  entrypoint.py  log_server.py  repeater.py
mmpm/constants/: color.py  paths.py  symbols.py  urls.py
mmpm/js/: mmpm.js  node_helper.js
mmpm/log/: factory.py  logger.py  server.py
mmpm/magicmirror/: controller.py  database.py  magicmirror.py  package.py
mmpm/subcommands/: _add_ext_pkg.py  _completion.py  _db.py  _env.py  _guided_setup.py  _install.py  _list.py  _log.py  _mm_ctl.py  _open.py  _remove.py  _search.py  _show.py  _sub_cmd_db.py  (+24 more)
scripts/: compress-static-files.sh  gen-mmpm-services.sh  install-static-files.sh
test/: helpers.py  requirements.test.txt  test_env.py  test_gui.py  test_singleton.py  test_ui.py  test_utils.py
tests/: test_singleton.py
ui/: Dockerfile  angular.json  bun.lockb  package-lock.json  package.json  tsconfig.json
web/: README.md  angular.json  bun.lockb  package-lock.json  package.json  tsconfig.json
(+646 files in other folders)
